[gd_scene load_steps=27 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://sounds/player/hurt1.mp3" type="AudioStream" id=2]
[ext_resource path="res://art/char_a_p1_0bas_humn_v01.png" type="Texture" id=3]
[ext_resource path="res://sounds/player/hurt3.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/player/hurt2.mp3" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 384, 64, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "grappling",
"speed": 0.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "jump_left",
"speed": 0.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "jump_right",
"speed": 0.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "jump_up",
"speed": 0.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 0.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 21, 25.5 )

[sub_resource type="CapsuleShape2D" id=26]
radius = 21.0
height = 22.0

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 32, 32, 32, -32, -32, -32, -32, 32 )

[node name="Player" type="KinematicBody2D" groups=["players"]]
collision_layer = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 19 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 24 )

[node name="CollisionShape2DRoundTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -19 )
shape = SubResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 2 )

[node name="BloodSpatter" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1, -18 )
scale = Vector2( 6, 6 )
emitting = false
amount = 25
lifetime = 0.7
one_shot = true
explosiveness = 0.82
lifetime_randomness = 1.0
fract_delta = false
emission_shape = 1
emission_sphere_radius = 2.5
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 100 )
initial_velocity = 65.97

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DamageOverlay" type="ColorRect" parent="CanvasLayer"]
color = Color( 1, 0, 0, 0.12549 )

[node name="Sounds" type="Node2D" parent="."]

[node name="hurt1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 2 )
volume_db = -11.556
pitch_scale = 0.85

[node name="hurt2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -11.556
pitch_scale = 0.85

[node name="hurt3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -11.556
pitch_scale = 0.85

[node name="Timers" type="Node2D" parent="."]

[node name="DamageOverlayTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="GameOverTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="GrappleTimer" type="Timer" parent="Timers"]
one_shot = true
